--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,16 @@ dependencies {
     
     compile group: 'org.springframework', name: 'spring-orm', version: '4.3.4.RELEASE'
     
-   
+    compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.21'
+	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
+	compile group: 'ch.qos.logback.contrib', name: 'logback-jackson', version: '0.1.5'
+	compile group: 'ch.qos.logback.contrib', name: 'logback-mongodb-classic', version: '0.1.5'
+	compile group: 'org.logback-extensions', name: 'logback-ext-spring', version: '0.1.4'
+	// https://mvnrepository.com/artifact/ch.qos.logback.contrib/logback-mongodb-core
+	compile group: 'ch.qos.logback.contrib', name: 'logback-mongodb-core', version: '0.1.5'
+	
+    
+    
     
 }
 
