--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,10 @@ dependencies {
 	compile group: 'ch.qos.logback.contrib', name: 'logback-jackson', version: '0.1.5'
 	compile group: 'ch.qos.logback.contrib', name: 'logback-mongodb-classic', version: '0.1.5'
 	compile group: 'org.logback-extensions', name: 'logback-ext-spring', version: '0.1.4'
-	// https://mvnrepository.com/artifact/ch.qos.logback.contrib/logback-mongodb-core
 	compile group: 'ch.qos.logback.contrib', name: 'logback-mongodb-core', version: '0.1.5'
+	
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.0.1'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.0.2'
 	
     
     
